Update: Set 2 read replicas in main cluster and update configs

--- a/kubernetes/postgres-main-values.yaml
+++ b/kubernetes/postgres-main-values.yaml
@@ -1,14 +1,33 @@
 architecture: replication
-primary:
-  service:
-    type: LoadBalancer
-  persistence:
-    size: 5Gi
-readReplicas:
-  replicaCount: 1
 auth:
   username: "testuser"
   password: "test123"
   database: "testdb"
   replicationUsername: "repl_user"
   replicationPassword: "repl123"
+
+primary:
+  service:
+    type: LoadBalancer
+  persistence:
+    size: 5Gi
+  resources:
+    limits:
+      memory: "1Gi"
+      cpu: "500m"
+    requests:
+      memory: "512Mi"
+      cpu: "250m"
+
+readReplicas:
+  # Here we specify 2 replicas
+  replicaCount: 2
+  persistence:
+    size: 5Gi
+  resources:
+    limits:
+      memory: "512Mi"
+      cpu: "250m"
+    requests:
+      memory: "256Mi"
+      cpu: "125m"
